--- a/styles/match-style.css
+++ b/styles/match-style.css
@@ -376,7 +376,7 @@ footer {
 
     .banner-img {
         width: 100%;
-        margin: 30px;
+        margin-top: 30px;
     }
 
     .banner-text h1 {
